[tool.poetry]
name = "cairos-python-lowlevel"
version = "0.1.0"
description = "A client library for accessing Cairos API"
authors = []
readme = "README.md"
packages = [
    {include = "cairos_python_lowlevel"},
]
include = ["CHANGELOG.md", "cairos_python_lowlevel/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
